Kubectl Scripts/bookstoreapplication/bookstore-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo  
  namespace: istio-system
spec:
  hosts:
  - "argo.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
